[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://png/cook-sprite.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12, 26.25 )

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[node name="player" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_mask = 255
script = ExtResource( 1 )
JUMP_STRENGTH = 400.0

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
__meta__ = {
"_aseprite_wizard_config_": {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"player": "player/Player-Collider/AnimationPlayer",
"source": "res://AspiriteAssets/cook-sprite.aseprite"
}
}

[node name="leftMirror" type="Sprite" parent="KinematicBody2D/Sprite"]
texture = ExtResource( 2 )

[node name="rightMirror" type="Sprite" parent="KinematicBody2D/Sprite"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, 13.25 )
shape = SubResource( 5 )

[node name="PlatformDetector" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 0, 39 )
cast_to = Vector2( 0, 6 )
collision_mask = 255

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D"]
root_node = NodePath("")
anims/default = SubResource( 6 )
